--- a/packages/patternfly-3/react-console/less/console.less
+++ b/packages/patternfly-3/react-console/less/console.less
@@ -1,5 +1,3 @@
-/**
-  Styling shared by both VncConsole and SerialConsole.
-*/
 @import 'serial-console';
 @import 'vnc-console';
+@import "desktop-viewer";
