--- a/packages/patternfly-3/react-console/sass/console.scss
+++ b/packages/patternfly-3/react-console/sass/console.scss
@@ -1,6 +1,3 @@
-/**
-  Styling shared by both VncConsole and SerialConsole.
-*/
 // Bootstrap Core variables and mixins
 @import 'bootstrap/variables';
 @import 'bootstrap/mixins';
@@ -13,7 +10,4 @@
 // Console StyleSheets
 @import "serial-console";
 @import "vnc-console";
-
-/**
-  Styling shared by both VncConsole and SerialConsole.
-*/
+@import "desktop-viewer";
